Creating the Components -051-exercise

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,7 @@ testem.log
 Thumbs.db
 package-lock.json
 package-lock.json
+my-first-app.code-workspace
+package-lock.json
+package-lock.json
+package-lock.json
